# fastapi-TZ

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_10_29_2236-90c3ad26edf6_creating_product_order_models.py  2024_11_01_2149-dc91b31b9e6a_changed_status_type.py
app/api/: order_api.py  product_api.py
app/config/: settings.py
app/crud/: order_crud.py  product_crud.py
app/database/: db.py  session.py
app/models/: __init__.py  orders.py  products.py
app/schemas/: __init__.py  order_schemas.py  product_schemas.py
app/services/: order_services.py  product_services.py
app/tests/: conftest.py  test_orders.py  test_products.py
