[tool.poetry]
name = "fastapi-tz"
version = "0.1.0"
description = ""
authors = ["Lordd1s <uaudias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.4"}
sqlalchemy = {extras = ["async"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
